# bookmemory

./: .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0cb12c43c022_create_bookmarks_tags_bookmark_tags.py  0f70344056e9_add_updated_at_to_bookmark_tags.py  18161e338c53_bookmark_status_no_content_and_vector_.py  3e40e46fda5e_make_bookmark_description_required.py  4774050f1e8c_backfill_bookmark_descriptions.py  67c92d1920eb_create_users.py  696572ef5e1e_update_bookmark_status_enum.py  8665d2ea5a5f_rename_ingest_method_enum_to_load_method.py  ba173e27c591_bookmark_load_hardening.py  bfcaa2465fc5_create_bookmark_chunks.py  dbc07a6dd6a6_rename_ingest_method_to_load_method.py  e9885d3454c4_users_oauth_identity_and_sessions.py
apps/api/src/bookmemory/: __main__.py  main.py
apps/api/src/bookmemory/api/v1/: auth.py  db.py  health.py  router.py  tags.py  users.py  version.py
apps/api/src/bookmemory/core/: cookies.py  settings.py
apps/api/src/bookmemory/db/: engine.py  session.py
apps/api/src/bookmemory/db/models/: __init__.py  bookmark.py  bookmark_chunk.py  bookmark_tag.py  session.py  tag.py  user.py
apps/api/src/bookmemory/schemas/: bookmarks.py
apps/api/src/bookmemory/services/ai/: openai.py  providers.py
apps/api/src/bookmemory/services/auth/: google_oauth.py  sessions.py  users.py
apps/api/src/bookmemory/services/bookmarks/: get_bookmark.py
apps/api/src/bookmemory/services/embedding/: chunk_embed.py
apps/api/src/bookmemory/services/extraction/: content_extract.py  html_extract.py  http_fetch.py  playwright_fetch.py  playwright_runtime.py  text_chunk.py
apps/api/src/bookmemory/services/search/: keyword_search.py  semantic_search.py  stopwords.py
apps/api/src/bookmemory/services/tags/: get_tags.py  normalize_tags.py
apps/api/src/bookmemory_api/: __main__.py  main.py
apps/api/src/bookmemory_api/api/dependencies/: auth.py
apps/api/src/bookmemory_api/api/v1/: auth.py  bookmarks.py  db.py  router.py  tags.py  users.py  version.py
apps/api/src/bookmemory_api/core/: cookies.py  settings.py
apps/api/src/bookmemory_api/db/: engine.py  session.py
apps/api/src/bookmemory_api/models/: __init__.py  session.py  user.py
apps/api/src/bookmemory_api/schemas/: bookmarks.py  user.py  users.py
(+117 files in other folders)
