[project]
name = "bookmemory-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  # fastapi core
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",

  # pagination
  "fastapi-pagination[sqlalchemy]>=0.14.1",

  # validation
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.0.1",

  # database
  "SQLAlchemy[asyncio]>=2.0.46",
  "asyncpg>=0.31.0",
  "alembic>=1.18.3",
  "pgvector>=0.3.6",

  # http scraping
  "httpx>=0.28.1",

  # HTML extraction
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "playwright>=1.50.0",
  "anyio>=4.0.0",

  # auth
  "authlib>=1.3.0",
  "itsdangerous>=2.2.0",

  # ai integration
  "openai>=2.10.0",
]

[project.optional-dependencies]
dev = [
  # type checking
  "mypy>=1.19",
  "types-Authlib",

  # linting / formatting
  "ruff>=0.7.2",

  # testing
  "pytest>=8.3.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
